----------------------------------------------------------------------
 OmegaT 2.5.4 update 2
----------------------------------------------------------------------
   1 Enhancement
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.5.4 update 2 vs. 2.5.4 update 1

  Other enhancements:

  - Fastest computation of Match Statistics. 
In addition, the first two lines are displayed as soon as they are computed

  Bug fixes:

  - Windows installer: the user language was always set in OmegaT.l4J.ini,
regardless of the choice of the user

  - Recognize single quotes in ENTITY of DTD file filter
  http://sourceforge.net/support/tracker.php?aid=3520305
(It was already implemented in 2.3 update 8, but had not been ported
to 2.5.)

----------------------------------------------------------------------
 OmegaT 2.5.4 update 1
----------------------------------------------------------------------
   3 Enhancements
   4 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
2.5.4 update 1 vs. 2.5.4

  Implemented requests:

  - Help&Manual: hide content of tags per translate=true/false
  http://sourceforge.net/support/tracker.php?aid=3528468

  - Camtasia added tags
  http://sourceforge.net/support/tracker.php?aid=3528472

  Other enhancements:

  - Windows installer: there's a new option to specify whether the 
language chosen during installation should be used for OmegaT. If
Yes, OmegaT.l4J.ini is modified to use that language.

  Bug fixes:

  - Exception if new non-default /tm contains TMs to segment
  http://sourceforge.net/support/tracker.php?aid=3425237

  - NullPointerException during resegmentation
  http://sourceforge.net/support/tracker.php?aid=3481757

  - When editing project-specific file filters, the checkbox was 
labelled jCheckBox1 instead of "Enable project specific filters"

  - When changing project-specific segmentation rules to default and back,